# Path-Tracer

./: CMakeLists.txt
assets/models/: chinese_dragon.glb
contrib/include/IMGUI/: imgui_impl_sdl2.cpp
src/PathTracer/: Box.cpp  Box.h  Camera.cpp  Camera.h  Film.cpp  Film.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  PathTracer.cpp  PathTracer.h  Ray.h  RayObject.h  Sphere.cpp  Sphere.h  Timer.cpp  Timer.h  Window.cpp  Window.h  main.cpp
